--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
         </section>
         <footer>
             <div class="container">
-                <h4>Zetta</h4>
-                <p>
+                <span class="logo">Zetta</span>
+                <p class="contact-details">
                     contact@zettavp.com 717 <br/>
                     Market Street, Suite 650 <br/>
                     SF, CA 94103
                 </p>
-                <p>Zetta Venture Partners &ndash; Copyright 2015</p>
+                <p id="copyright">Zetta Venture Partners &ndash; Copyright 2015</p>
             </div>
         </footer>
 
