--- a/index.html
+++ b/index.html
@@ -58,19 +58,207 @@
         </section>
         <section id="companies">
             <div class="container">
-                <h2>We invest much more than cash into our companies.</h2>
+                <h2>Analytics Pioneers</h2>
                 <div class="company-pair">
                     <div class="company" id="domo">
                         <h3>Domo</h3>
+                        <dl>
+                            <dt>Raised:</dt>
+                            <dd>$450M</dd>
+                            <dt>Location:</dt>
+                            <dd>UT</dd>
+                            <dt>Round:</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Mark Gorenberg</dd>
+                        </dl>
+                        <p>Domo serves executives across every role and across a broad range of industries with dashboards of business data.</p>
+                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
                     </div>
-                    <div class="company" id="inside-sales">
-                        <h3>InsideSales.com</h3>
+                    <div class="company" id="insidesales">
+                        <h3>Insidesales</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$$250M</dd>
+                            <dt>Location</dt>
+                            <dd>UT</dd>
+                            <dt>Round</dt>
+                            <dd>A</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Mark Gorenberg</dd>
+                        </dl>
+                        <p>InsideSales.com offers a sales acceleration platform that generates revenue growth up to 30% in as little as 90 days.</p>
+                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
                     </div>
                 </div>
+                <div class="company-pair">
+                    <div class="company" id="domo">
+                        <h3>Lucid</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$15M</dd>
+                            <dt>Location</dt>
+                            <dd>CA</dd>
+                            <dt>Round</dt>
+                            <dd>A</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Mark Gorenberg</dd>
+                        </dl>
+                        <p>Lucid aggregates energy and water data from 150+ metering and building systems into one unified operating system.</p>
+                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                    </div>
+                    <div class="company" id="insidesales">
+                        <h3>Kaggle</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$5M</dd>
+                            <dt>Location</dt>
+                            <dd>UT</dd>
+                            <dt>Round</dt>
+                            <dd>A</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Ash Fontana</dd>
+                        </dl>
+                        <p>Kaggle is the world’s largest community of data scientists competing to solve business problems.</p>
+                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="domo">
+                        <h3>Clearbit</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$3M</dd>
+                            <dt>Location</dt>
+                            <dd>CA</dd>
+                            <dt>Round</dt>
+                            <dd>Seed</dd>
+                        </dl>
+                        <p>Clearbit builds a suite of business intelligence APIs to help companies find more information on their customers.</p>
+                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                    </div>
+                    <div class="company" id="insidesales">
+                        <h3>FollowAnalytics</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$12M</dd>
+                            <dt>Location</dt>
+                            <dd>France</dd>
+                            <dt>Round</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Mark Gorenberg</dd>
+                        </dl>
+                        <p>Followanalytics provides brands with solutions to launch, measure, optimize and maintain their presence in the mobile world.</p>
+                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="domo">
+                        <h3>Eventboard</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$8M</dd>
+                            <dt>Location</dt>
+                            <dd>UT</dd>
+                            <dt>Round</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Mark Gorenberg</dd>
+                        </dl>
+                        <p>EventBoard optimizes collaboration in the enterprise by providing employee meeting tools and activity-driven insights. </p>
+                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                    </div>
+                    <div class="company" id="insidesales">
+                        <h3>Tractable</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$2M</dd>
+                            <dt>Location</dt>
+                            <dd>England</dd>
+                            <dt>Round</dt>
+                            <dd>Seed</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Ash Fontana</dd>
+                        </dl>
+                        <p>Tractable provides fully automated visual recognition through Artificial Intelligence.</p>
+                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="domo">
+                        <h3>Content Analytics</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$5M</dd>
+                            <dt>Location</dt>
+                            <dd>CA</dd>
+                            <dt>Round</dt>
+                            <dd>A</dd>
+                        </dl>
+                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                    </div>
+                    <div class="company" id="insidesales">
+                        <h3>Optimine</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$5M</dd>
+                            <dt>Location</dt>
+                            <dd>MN</dd>
+                            <dt>Round</dt>
+                            <dd>A</dd>
+                        </dl>
+                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="domo">
+                        <h3>Pixlee</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$2M</dd>
+                            <dt>Location</dt>
+                            <dd>CA</dd>
+                            <dt>Round</dt>
+                            <dd>A</dd>
+                        </dl>
+                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                    </div>
+                    <div class="company" id="insidesales">
+                        <h3>Stealth Company</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$40M</dd>
+                            <dt>Location</dt>
+                            <dd>CA</dd>
+                            <dt>Round</dt>
+                            <dd>A</dd>
+                        </dl>
+                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
+                    </div>
+                </div>
+                <div class="company-pair">
+                    <div class="company" id="domo">
+                        <h3>Domino Data</h3>
+                        <dl>
+                            <dt>Raised</dt>
+                            <dd>$3M</dd>
+                            <dt>Location</dt>
+                            <dd>CA</dd>
+                            <dt>Round</dt>
+                            <dd>A</dd>
+                            <dt>Board seat:</dt>
+                            <dd>Mark Gorenberg</dd>
+                        </dl>
+                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                    </div>
+                </div>
+
             </div>
         </section>
         <section id="people">
             <div class="container">
+                <h2>We’re a new fund, but we&rsquo;re not new to investing.</h2>
                 <ul>
                     <li>
                         <h3><b>Mark Gorenberg</b> – Managing Director</h3>
@@ -102,7 +290,7 @@
             <div class="container">
                 <span class="logo">Zetta</span>
                 <p class="contact-details">
-                    contact@zettavp.com 717 <br/>
+                    contact@zettavp.com  <br/>
                     Market Street, Suite 650 <br/>
                     SF, CA 94103
                 </p>
@@ -122,7 +310,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            ga('create','UA-69111973-1','auto');ga('send','pageview');
         </script>
     </body>
 </html>
