--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                     <div class="company" id="insidesales">
                         <h3>Insidesales</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$$250M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>UT</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>A</dd>
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
@@ -95,11 +95,11 @@
                     <div class="company" id="domo">
                         <h3>Lucid</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$15M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>CA</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>A</dd>
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
@@ -110,11 +110,11 @@
                     <div class="company" id="insidesales">
                         <h3>Kaggle</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$5M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>UT</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>A</dd>
                             <dt>Board seat:</dt>
                             <dd>Ash Fontana</dd>
@@ -127,11 +127,11 @@
                     <div class="company" id="domo">
                         <h3>Clearbit</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$3M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>CA</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>Seed</dd>
                         </dl>
                         <p>Clearbit builds a suite of business intelligence APIs to help companies find more information on their customers.</p>
@@ -140,11 +140,11 @@
                     <div class="company" id="insidesales">
                         <h3>FollowAnalytics</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$12M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>France</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>Seed</dd>
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
@@ -157,11 +157,11 @@
                     <div class="company" id="domo">
                         <h3>Eventboard</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$8M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>UT</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>Seed</dd>
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
@@ -172,11 +172,11 @@
                     <div class="company" id="insidesales">
                         <h3>Tractable</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$2M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>England</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>Seed</dd>
                             <dt>Board seat:</dt>
                             <dd>Ash Fontana</dd>
@@ -189,11 +189,11 @@
                     <div class="company" id="domo">
                         <h3>Content Analytics</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$5M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>CA</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
                         <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
@@ -201,11 +201,11 @@
                     <div class="company" id="insidesales">
                         <h3>Optimine</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$5M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>MN</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
                         <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
@@ -215,11 +215,11 @@
                     <div class="company" id="domo">
                         <h3>Pixlee</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$2M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>CA</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
                         <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
@@ -227,11 +227,11 @@
                     <div class="company" id="insidesales">
                         <h3>Stealth Company</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$40M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>CA</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
                         <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
@@ -241,11 +241,11 @@
                     <div class="company" id="domo">
                         <h3>Domino Data</h3>
                         <dl>
-                            <dt>Raised</dt>
+                            <dt>Raised:</dt>
                             <dd>$3M</dd>
-                            <dt>Location</dt>
+                            <dt>Location:</dt>
                             <dd>CA</dd>
-                            <dt>Round</dt>
+                            <dt>Round:</dt>
                             <dd>A</dd>
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
