logos done. phew

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
                 <h2>Analytics Pioneers</h2>
                 <div class="company-pair">
                     <div class="company" id="domo">
-                        <h3>Domo</h3>
+                        <h3>
+                            <a href="https://www.domo.com/" target="_blank">
+                                <img src="/img/company01.png" alt="Domo">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$450M</dd>
@@ -76,10 +80,14 @@
                         <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
                     </div>
                     <div class="company" id="insidesales">
-                        <h3>Insidesales</h3>
+                        <h3>
+                            <a href="https://www.insidesales.com/" target="_blank">
+                                <img src="/img/company02.png" alt="Insidesales">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
-                            <dd>$$250M</dd>
+                            <dd>$250M</dd>
                             <dt>Location:</dt>
                             <dd>UT</dd>
                             <dt>Round:</dt>
@@ -92,8 +100,12 @@
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="domo">
-                        <h3>Lucid</h3>
+                    <div class="company" id="lucid">
+                        <h3>
+                            <a href="http://www.luciddesigngroup.com/" target="_blank">
+                                <img src="/img/company03.png" alt="Lucid">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$15M</dd>
@@ -105,10 +117,14 @@
                             <dd>Mark Gorenberg</dd>
                         </dl>
                         <p>Lucid aggregates energy and water data from 150+ metering and building systems into one unified operating system.</p>
-                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                        <a href="https://www.lucidconnects.com/company/careers">Jobs at Lucid</a>
                     </div>
-                    <div class="company" id="insidesales">
-                        <h3>Kaggle</h3>
+                    <div class="company" id="kaggle">
+                        <h3>
+                            <a href="https://www.kaggle.com/" target="_blank">
+                                <img src="/img/company04.png" alt="Kaggle">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$5M</dd>
@@ -120,12 +136,16 @@
                             <dd>Ash Fontana</dd>
                         </dl>
                         <p>Kaggle is the world’s largest community of data scientists competing to solve business problems.</p>
-                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
+                        <a href="https://www.kaggle.com/careers">Jobs at Kaggle</a>
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="domo">
-                        <h3>Clearbit</h3>
+                    <div class="company" id="clearbit">
+                        <h3>
+                            <a href="https://clearbit.com/" target="_blank">
+                                <img src="/img/company05.png" alt="Clearbit">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$3M</dd>
@@ -135,10 +155,14 @@
                             <dd>Seed</dd>
                         </dl>
                         <p>Clearbit builds a suite of business intelligence APIs to help companies find more information on their customers.</p>
-                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                        <a href="https://clearbit.com/jobs">Jobs at Clearbit</a>
                     </div>
-                    <div class="company" id="insidesales">
-                        <h3>FollowAnalytics</h3>
+                    <div class="company" id="follow">
+                        <h3>
+                            <a href="http://followanalytics.com/" target="_blank">
+                                <img src="/img/company06.png" alt="FollowAnalytics">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$12M</dd>
@@ -150,12 +174,16 @@
                             <dd>Mark Gorenberg</dd>
                         </dl>
                         <p>Followanalytics provides brands with solutions to launch, measure, optimize and maintain their presence in the mobile world.</p>
-                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
+                        <a href="http://followanalytics.com/jobs/">Jobs at Follow Analytics</a>
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="domo">
-                        <h3>Eventboard</h3>
+                    <div class="company" id="eventboard">
+                        <h3>
+                            <a href="https://eventboard.io/" target="_blank">
+                                <img src="/img/company07.png" alt="Eventboard">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$8M</dd>
@@ -167,10 +195,14 @@
                             <dd>Mark Gorenberg</dd>
                         </dl>
                         <p>EventBoard optimizes collaboration in the enterprise by providing employee meeting tools and activity-driven insights. </p>
-                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                        <a href="https://eventboard.workable.com/">Jobs at Eventboard</a>
                     </div>
-                    <div class="company" id="insidesales">
-                        <h3>Tractable</h3>
+                    <div class="company" id="tractable">
+                        <h3>
+                            <a href="http://tractable.io/" target="_blank">
+                                <img src="/img/company08.png" alt="Tractable">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$2M</dd>
@@ -182,12 +214,16 @@
                             <dd>Ash Fontana</dd>
                         </dl>
                         <p>Tractable provides fully automated visual recognition through Artificial Intelligence.</p>
-                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
+                        <a href="https://angel.co/tractable/jobs">Jobs at Tractable</a>
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="domo">
-                        <h3>Content Analytics</h3>
+                    <div class="company" id="content">
+                        <h3>
+                            <a href="http://contentanalyticsinc.com/" target="_blank">
+                                <img src="/img/company09.png" alt="Content Analytics">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$5M</dd>
@@ -196,10 +232,13 @@
                             <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
-                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
                     </div>
-                    <div class="company" id="insidesales">
-                        <h3>Optimine</h3>
+                    <div class="company" id="optimine">
+                        <h3>
+                            <a href="http://optimine.com/" target="_blank">
+                                <img src="/img/company10.png" alt="Optimine">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$5M</dd>
@@ -208,12 +247,16 @@
                             <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
-                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
+                        <a href="http://optimine.com/careers/">Jobs at Optimine</a>
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="domo">
-                        <h3>Pixlee</h3>
+                    <div class="company" id="pixlee">
+                        <h3>
+                            <a href="https://www.pixlee.com/" target="_blank">
+                                <img src="/img/company11.png" alt="Pixlee">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$2M</dd>
@@ -222,10 +265,14 @@
                             <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
-                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                        <a href="http://www.pixlee.com/careers">Jobs at Pixlee</a>
                     </div>
-                    <div class="company" id="insidesales">
-                        <h3>Stealth Company</h3>
+                    <div class="company" id="stealth">
+                        <h3>
+                            <a href="#" target="_blank">
+                                <img src="/img/company12.png" alt="Stealth Company">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$40M</dd>
@@ -234,12 +281,15 @@
                             <dt>Round:</dt>
                             <dd>A</dd>
                         </dl>
-                        <a href="http://www.insidesales.com/careers">Jobs at Insidesales</a>
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="domo">
-                        <h3>Domino Data</h3>
+                    <div class="company" id="domino">
+                        <h3>
+                            <a href="https://www.dominodatalab.com/" target="_blank">
+                                <img src="/img/company13.png" alt="Domino Data">
+                            </a>
+                        </h3>
                         <dl>
                             <dt>Raised:</dt>
                             <dd>$3M</dd>
@@ -250,7 +300,7 @@
                             <dt>Board seat:</dt>
                             <dd>Mark Gorenberg</dd>
                         </dl>
-                        <a href="https://www.domo.com/company/careers">Jobs at Domo</a>
+                        <a href="https://www.dominodatalab.com/careers">Jobs at Domino</a>
                     </div>
                 </div>
 
