--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     </div>
                 </div>
                 <div class="company-pair">
-                    <div class="company" id="domino">
+                    <div class="company" id="domino" class="last">
                         <h3>
                             <a href="https://www.dominodatalab.com/" target="_blank">
                                 <img src="/img/company13.png" alt="Domino Data">
