--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="company" id="domo">
                         <h3>
                             <a href="https://www.domo.com/" target="_blank">
-                                <img src="/img/company01.png" alt="Domo">
+                                <img src="img/company01.png" alt="Domo">
                             </a>
                         </h3>
                         <dl>
@@ -82,7 +82,7 @@
                     <div class="company" id="insidesales">
                         <h3>
                             <a href="https://www.insidesales.com/" target="_blank">
-                                <img src="/img/company02.png" alt="Insidesales">
+                                <img src="img/company02.png" alt="Insidesales">
                             </a>
                         </h3>
                         <dl>
@@ -103,7 +103,7 @@
                     <div class="company" id="lucid">
                         <h3>
                             <a href="http://www.luciddesigngroup.com/" target="_blank">
-                                <img src="/img/company03.png" alt="Lucid">
+                                <img src="img/company03.png" alt="Lucid">
                             </a>
                         </h3>
                         <dl>
@@ -122,7 +122,7 @@
                     <div class="company" id="kaggle">
                         <h3>
                             <a href="https://www.kaggle.com/" target="_blank">
-                                <img src="/img/company04.png" alt="Kaggle">
+                                <img src="img/company04.png" alt="Kaggle">
                             </a>
                         </h3>
                         <dl>
@@ -143,7 +143,7 @@
                     <div class="company" id="clearbit">
                         <h3>
                             <a href="https://clearbit.com/" target="_blank">
-                                <img src="/img/company05.png" alt="Clearbit">
+                                <img src="img/company05.png" alt="Clearbit">
                             </a>
                         </h3>
                         <dl>
@@ -160,7 +160,7 @@
                     <div class="company" id="follow">
                         <h3>
                             <a href="http://followanalytics.com/" target="_blank">
-                                <img src="/img/company06.png" alt="FollowAnalytics">
+                                <img src="img/company06.png" alt="FollowAnalytics">
                             </a>
                         </h3>
                         <dl>
@@ -181,7 +181,7 @@
                     <div class="company" id="eventboard">
                         <h3>
                             <a href="https://eventboard.io/" target="_blank">
-                                <img src="/img/company07.png" alt="Eventboard">
+                                <img src="img/company07.png" alt="Eventboard">
                             </a>
                         </h3>
                         <dl>
@@ -200,7 +200,7 @@
                     <div class="company" id="tractable">
                         <h3>
                             <a href="http://tractable.io/" target="_blank">
-                                <img src="/img/company08.png" alt="Tractable">
+                                <img src="img/company08.png" alt="Tractable">
                             </a>
                         </h3>
                         <dl>
@@ -221,7 +221,7 @@
                     <div class="company" id="content">
                         <h3>
                             <a href="http://contentanalyticsinc.com/" target="_blank">
-                                <img src="/img/company09.png" alt="Content Analytics">
+                                <img src="img/company09.png" alt="Content Analytics">
                             </a>
                         </h3>
                         <dl>
@@ -236,7 +236,7 @@
                     <div class="company" id="optimine">
                         <h3>
                             <a href="http://optimine.com/" target="_blank">
-                                <img src="/img/company10.png" alt="Optimine">
+                                <img src="img/company10.png" alt="Optimine">
                             </a>
                         </h3>
                         <dl>
@@ -254,7 +254,7 @@
                     <div class="company" id="pixlee">
                         <h3>
                             <a href="https://www.pixlee.com/" target="_blank">
-                                <img src="/img/company11.png" alt="Pixlee">
+                                <img src="img/company11.png" alt="Pixlee">
                             </a>
                         </h3>
                         <dl>
@@ -270,7 +270,7 @@
                     <div class="company" id="stealth">
                         <h3>
                             <a href="#" target="_blank">
-                                <img src="/img/company12.png" alt="Stealth Company">
+                                <img src="img/company12.png" alt="Stealth Company">
                             </a>
                         </h3>
                         <dl>
@@ -287,7 +287,7 @@
                     <div class="company" id="domino" class="last">
                         <h3>
                             <a href="https://www.dominodatalab.com/" target="_blank">
-                                <img src="/img/company13.png" alt="Domino Data">
+                                <img src="img/company13.png" alt="Domino Data">
                             </a>
                         </h3>
                         <dl>
